<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Stock Hawk</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint">FB</string>
    <string name="input_prefill"> </string>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>
    <string name="stock_saved">This stock is already saved!</string>

    <!--Server Issues titles-->
    <string name="empty_stock_list">No Stock Information Available</string>
    <string name="empty_stock_list_no_network">No stock information available. The network is not available to fetch stock data.</string>
    <string name="empty_stock_list_server_down">No stock information available. The server is not returning data.</string>
    <string name="empty_stock_list_server_error">No stock information available. The server is not returning valid data. Please check for an updated version of Stock Hawk.</string>

    <string name="pref_stock_status_key" translatable="false">stock-status</string>

    <string name="invalid_stock_symbol">The Stock you are trying to add is invalid. Please try another Stock Symbol.</string>

    <string name="symbol_detail" formatted="true" translatable="false">%s Detail</string>

    <!--stock detail extra titles -->
    <string name="stock_detail_extra_symbol">Stock Symbol</string>
    <string name="stock_detail_extra_name">Stock Name</string>
    <string name="stock_detail_extra_first">First Trade</string>
    <string name="stock_detail_extra_last">Last Trade</string>
    <string name="stock_detail_extra_currency">Currency</string>
    <string name="stock_detail_extra_bid">Bid Price</string>

    <string name="pref_historic_status_key" translatable="false">historic-status</string>

    <!-- Detail View Server Issues-->
    <string name="no_data">Data is not available right now!</string>
    <string name="retry">RETRY</string>
    <string name="empty_view_text">Stocks Data not available!</string>
    <string name="error_json">Can\'t able to parse data!</string>
    <string name="no_internet">Internet Connection is required!</string>
    <string name="unknown_error">Some Unknown errors are accrued!</string>
    <string name="server_down">Server is not responding!</string>
    <string name="no_error">No errors!</string>

    <!-- A11y -->
    <string name="a11y_symbol">Symbol: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_bid_price">Bid Price: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_change">Change: <xliff:g id="high">%1$s</xliff:g></string>
    <string name="a11y_graph">Graph: <xliff:g id="low">%1$s</xliff:g></string>
    <string name="a11y_add_stock">Stock Added: <xliff:g id="low">%1$s</xliff:g></string>

    <!--widget -->
    <string name="widget_title">Stock Hawk</string>
    <string name="title_widget_detail">Stock Hawk Detail</string>

</resources>
