<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/stock_white"
    android:padding="@dimen/activity_horizontal_margin"
    app:columnCount="2">

    <TextView
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/stock_detail_extra_symbol"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/grey_700"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/stock_detail_symbol"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/Stock_black"
        app:layout_gravity="fill|end"
        tools:text="FB"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"/>

    <TextView
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/stock_detail_extra_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/grey_700"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/stock_detail_name"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/Stock_black"
        app:layout_gravity="fill"
        tools:text="Facebook Inc."
        app:layout_rowWeight="1"
        app:layout_columnWeight="1"/>

    <TextView
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/stock_detail_extra_first"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/grey_700"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/stock_detail_first"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/Stock_black"
        app:layout_gravity="fill"
        tools:text="29/6/2016"
        app:layout_rowWeight="1"
        app:layout_columnWeight="1"/>

    <TextView
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/stock_detail_extra_last"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/grey_700"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/stock_detail_last"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/Stock_black"
        app:layout_gravity="fill"
        tools:text="29/6/2016"
        app:layout_rowWeight="1"
        app:layout_columnWeight="1"/>

    <TextView
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/stock_detail_extra_currency"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/grey_700"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/stock_detail_currency"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/Stock_black"
        app:layout_gravity="fill"
        tools:text="USD"
        app:layout_rowWeight="1"
        app:layout_columnWeight="1"/>

    <TextView
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/stock_detail_extra_bid"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/grey_700"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/stock_detail_bid"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/Stock_black"
        app:layout_gravity="fill"
        tools:text="214.06"
        app:layout_rowWeight="1"
        app:layout_columnWeight="1"/>

</android.support.v7.widget.GridLayout>