<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.GridLayout
        android:id="@+id/detail_additional_pane"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/detail_accent_pane_background"
        android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingEnd="@dimen/stock_detail_horizontal_padding"
        android:paddingLeft="@dimen/stock_detail_horizontal_padding"
        android:paddingRight="@dimen/stock_detail_horizontal_padding"
        android:paddingStart="@dimen/stock_detail_horizontal_padding"
        android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
        app:columnCount="2">

        <TextView
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/stock_detail_extra_symbol"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/stock_detail_symbol"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white"
            app:layout_gravity="fill"
            tools:text="FB" />

        <TextView
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/stock_detail_extra_bid"
            android:textColor="@color/detail_accent_label"
            android:textSize="20sp"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/stock_detail_bid"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white"
            app:layout_gravity="fill"
            tools:text="214.06" />

        <TextView
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/stock_detail_extra_currency"
            android:textColor="@color/detail_accent_label"
            android:textSize="20sp"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/stock_detail_currency"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white"
            app:layout_gravity="fill"
            tools:text="USD" />

        <TextView
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/stock_detail_extra_first"
            android:textColor="@color/detail_accent_label"
            android:textSize="20sp"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/stock_detail_first"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white"
            app:layout_gravity="fill"
            tools:text="29/6/2016" />

        <TextView
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/stock_detail_extra_last"
            android:textColor="@color/detail_accent_label"
            android:textSize="20sp"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/stock_detail_last"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white"
            app:layout_gravity="fill"
            tools:text="29/6/2016" />

    </android.support.v7.widget.GridLayout>

</LinearLayout>